# fastfixupfinder

./: .gitignore  CLAUDE.md  INTERACTIVE_GUIDE.md  Makefile  README.md  SAFETY.md  TESTCASE.md  WORKFLOWS.md  fix_permissions.sh  pyproject.toml  run_demo.sh  setup_path.bat  setup_path.py  setup_path.sh
fastfixupfinder/: __init__.py  cli.py  completion.py  fixup_creator.py  git_analyzer.py  gui.py
