[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastfixupfinder"
version = "1.0.0"
description = "A tool to automatically identify fixup targets and create fixup commits"
authors = [{name = "Klaus Gerlicher", email = "klaus@klausgerlicher.de"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["git", "fixup", "commits", "rebase"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "gitpython>=3.1.0",
    "textual>=0.41.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
fastfixupfinder = "fastfixupfinder.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastfixupfinder*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true